# geass-registry

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  schema-explanation.md  schema.md  schema.yaml
definitions/: languages.yaml
go/: bubbletea.yaml
metadata/: kinds.yaml  languages.yaml  package-types.yaml  technology-types.yaml
registrar/: __main__.py  main.py  prompts.py  pyproject.toml
registrar/models/: kind.py  package.py
registrar/registry/: index.py  registry.py
registrar/tests/: test_registry.py
schemas/: technology.schema.json
tests/: test_index.py
