[project]
name = "registrar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
]

[tool.pytest.ini_options]
pythonpath = [
    ".."
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
